# cpp-primer-plus-exercises

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Chapter2 Getting Started with C++/: 2.1_myfirst.cpp  2.2_carrots.cpp  2.3_getinfo.cpp  2.5_ourfunc.cpp  2.6_convert.cpp  CMakeLists.txt
Chapter2_Getting Started with C++/: 2.4_sqrt.cpp
Chapter3 Dealing with Data/: 3.1_limits.cpp  3.2_exceed.cpp  3.4_hexoct2.cpp  3.5_chartype.cpp  3.6_morechar.cpp  CMakeLists.txt
