cmake_minimum_required(VERSION 4.2)
project(C__PrimePlus)

set(CMAKE_CXX_STANDARD 11)

add_executable(myfirst "Chapter2 Getting Started with C++/2.1_myfirst.cpp")
add_executable(carrots "Chapter2 Getting Started with C++/2.2_carrots.cpp")
add_executable(getinfo "Chapter2 Getting Started with C++/2.3_getinfo.cpp")
add_executable(sqrt "Chapter2 Getting Started with C++/2.4_sqrt.cpp")
